# GraphicsPlayground

./: Cargo.toml  build.rs
assets/shaders/: square_texture.frag  square_texture.vert  test.frag  test.vert
lib/gl/: Cargo.toml
lib/gl/src/: lib.rs
renderer_derive/: Cargo.toml
renderer_derive/src/: lib.rs
src/: main.rs
src/renderer/: camera.rs  data.rs  event.rs  gl_buffers.rs  mod.rs  shader.rs  texture.rs  window.rs
src/resources/: mod.rs
