[package]
name = "playground"
version = "0.1.0"
authors = ["Oliver Eriksson <olieri@kth.se>"]
edition = "2018"

[dependencies]
renderer_derive = { path = "renderer_derive" }
gl = { path = "lib/gl" }
nalgebra = "0.24.0"
failure = "0.1.8"
glutin = "0.23.0"
image = "0.23.12"

[build-dependencies]
walkdir = "2.1"

[features]
gl_debug = ["gl/debug"]